<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <import type="com.jkb.supportfragment.demo.entity.auth.RegisterEntity"/>

        <import type="com.jkb.commonlib.utils.StringUtils"/>

        <variable
            name="register"
            type="RegisterEntity"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/general"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/registerTitle"
            style="@style/TitleStyle"
            android:background="@color/colorPrimary">

            <include layout="@layout/title_style_0"/>
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_continue"
            android:layout_below="@+id/registerTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/register_avatar"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:background="@drawable/selector_color_clarity_gravy_alpha30"
                        android:scaleType="centerCrop"
                        android:src="@{StringUtils.hasEmpty(register.avatarUrl)?@drawable/ic_placeholder_profile:register.avatarUrl}"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="10dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            app:counterMaxLength="50"
                            >

                            <android.support.design.widget.TextInputEditText
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableBottom="@drawable/line_color_primary"
                                android:drawablePadding="5dp"
                                android:inputType="text"
                                android:text="@={register.name}"
                                android:textColorHint="@color/hint"
                                />
                        </android.support.design.widget.TextInputLayout>

                        <RadioGroup
                            android:id="@+id/register_radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{register.sex.equals(@string/male)}"
                                android:text="@string/male"
                                android:textColor="@color/hint"/>

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{register.sex.equals(@string/female)}"
                                android:text="@string/female"
                                android:textColor="@color/hint"/>
                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/general_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_you_can_match_only_when_you_use_yourself_photo"
                        android:textColor="@color/hint"
                        android:textSize="@dimen/text_size_s"/>

                    <TextView
                        android:id="@+id/register_birthday"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/selector_color_clarity_gravy_alpha30"
                        android:drawableBottom="@drawable/line_color_gravy"
                        android:drawablePadding="5dp"
                        android:hint="@string/birth_date"
                        android:inputType="text"
                        android:text="@={register.birthday}"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/hint"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/account_til_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/account_et_account"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableBottom="@drawable/line_color_gravy"
                            android:drawablePadding="5dp"
                            android:inputType="textPassword"
                            android:text="@={register.password}"
                            android:textColorHint="@color/hint"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/register_means_agree_user_rules"
                        android:textColor="@color/hint"
                        android:textSize="@dimen/text_size_s"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/register_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_color_primart_dark"
            android:enabled="@{StringUtils.hasEmpty(register.account,register.birthday,register.name,register.password,register.sex)?false:true}"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"/>
    </RelativeLayout>
</layout>